# libdarknotify

./: .clang-format  .gitignore  meson.build
example/: main.cpp  meson.build
lib/: meson.build
lib/siga/dark_notify/: appearance.hpp  dark_notify.cpp  dark_notify.hpp  dark_notify.mm
lib/siga/dark_notify/impl/macos/: .gitignore  impl.hpp  impl.mm  nsapp.h  nsapp.hpp  nsapp.mm
lib/siga/dark_notify/impl/windows/: reg_monitor.cpp  reg_monitor.hpp
lib/siga/dark_notify/impl/windows/util/: cancellable_event.cpp  cancellable_event.hpp  error.hpp  winapi_scoped_handle.hpp
lib/siga/dark_notify/impl/xdg/: glib.cpp  glib.hpp
lib/siga/dark_notify/util/: basic_scoped_handle.hpp  export.hpp
